challenges/16_deployment-strategies/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: demo-app
  name: demo-app
  namespace: sebastiankr
spec:
  replicas: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: demo-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 60%
      maxUnavailable: 20%
  template:
    metadata:
      labels:
        run: demo-app
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - image: argoproj/rollouts-demo:green
          name: demo-app
          resources:
            limits: {}
          ports:
            - containerPort: 8080
              name: web
          readinessProbe:
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 5
            httpGet:
              port: 8080
              path: /
          livenessProbe:
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 5
            httpGet:
              port: 8080
              path: /
