challenges/16_deployment-strategies/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: demo-app
  name: demo-app
  namespace: sebastiankr
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: web
  selector:
    run: demo-app
  sessionAffinity: None
  type: ClusterIP
