challenges/16_deployment-strategies/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
  namespace: sebastiankr
spec:
  ingressClassName: nginx
  rules:
    - host: skr-demo.k8s.usu.trygoo.gl #When running Minikube you can use nip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: demo-app
                port:
                  name: web
